# Global_Mind

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  globalmindmemoryoptin.bundle  globalmindpipelinefixes.bundle  ingestion_update.md  pyproject.toml  render.yaml  requirements.txt  setup_db.py  test_sql.py
LocalMind_UI/: README.md  api.md  index.html  package-lock.json  package.json  vite.config.js
LocalMind_UI/src/: App.jsx  main.jsx
config/: providers.yaml
docs/: ARCHITECTURE.md  Apple's New iPhone Lineup (2026).pptx  DEPLOY.md  document-identity.html  nvidia_gpu_sales_synthetic_2026.csv
docs/design-history/: rag-free-apis-architecture.md
frontend/: index.html
frontend/assets/: abnfDiagram-VRR7QNED-BDO6Xrp-.js  abnfDiagram-VRR7QNED-BMW4RHlx.js  abnfDiagram-VRR7QNED-BOZ9bcwQ.js  abnfDiagram-VRR7QNED-BTwQAoBh.js  abnfDiagram-VRR7QNED-BavTY8Gp.js  abnfDiagram-VRR7QNED-Bmgwe_aS.js  abnfDiagram-VRR7QNED-Bp-sN_Qn.js  abnfDiagram-VRR7QNED-C15o9COQ.js  abnfDiagram-VRR7QNED-C3Oa-eh1.js  (+856 more)
scripts/: adversarial_smoke_test.py  setup_db.py
src/: __init__.py  cli.py  main.py
src/api/: __init__.py  ui.py  (+3 more)
tests/: test_citations_and_routing.py  test_file_lock.py  test_folder_ingestion.py  test_generation_context.py  test_ingestion_concurrency.py  test_ingestion_registry.py  test_ingestion_registry_and_watcher.py  test_near_duplicate_suppression.py  test_path_safety.py  test_pipeline_e2e_integration.py  test_provider_fallback.py  test_provider_gemini.py  test_query_pipeline.py  test_sql_dialects.py  test_stages.py
(+61 files in other folders)
